# EcoLearn-Final

./: .env.example  .gitignore  QUICK_SETUP.md  README.md  pyproject.toml  requirements.txt
attached_assets/: Pasted--COMPLETE-PROJECT-SPECIFICATION-EcoLearn-Environmental-_1765960532737.txt
backend/: create_tables.py  create_test_users.py  database.py  deps.py  main.py  models.py  schemas.py  security.py
backend/routers/: auth.py  courses.py  enrollments.py  lessons.py  progress.py  quizzes.py  users.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  api.js
frontend/src/components/: BackButton.jsx  CertificateCard.jsx  StudentRow.jsx
frontend/src/pages/: Dashboard.jsx  Login.jsx
frontend/src/pages/student/: Certificate.jsx  Courses.jsx  EnrolledCourses.jsx  Lessons.jsx  Progress.jsx  Quiz.jsx
frontend/src/pages/teacher/: CreateCourse.jsx  CreateLesson.jsx  CreateQuiz.jsx  TeacherCourses.jsx
frontend/src/styles/: global.css
frontend/src/utils/: auth.js
